--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -1,10 +1,10 @@
 /* SECCION CONTACTO */
 .contacto{
-    background: url(../img/fondo6.jpg);
+    background-color: white;
     background-size: cover; /* expande imagen para que cubra todo el fondo */
-    color: #fff;
-    padding-top: 6%;
-    padding-bottom: 6%;
+    color: black;
+    padding-top: 4%;
+    padding-bottom: 2%;
 }
 .contacto .contenido-seccion{
     max-width: 1100px;
@@ -53,7 +53,7 @@
     left: 0;
     width: 0;
     height: 100%;
-    background-color: #30dacc;
+    background-color: #D32F2F;
     z-index: -1;
     transition: 1s;
 }
