--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,8 +1,8 @@
 .seccionServicio{
-    background-image: url(../img/fondo1.jpg);
-    background-size: cover;
-    padding-top: 4% ;
-    padding-bottom: 4% ;
+    background: url(../img/fondoPiedraGris.jpg);
+    padding-top: 3% ;
+    color: black;
+    padding-bottom: 3% ;
 }
 .cajasServicio{
     display: flex;
@@ -13,10 +13,13 @@
 }
 .miServicio{
     font-size: xx-large;
+    font-family: 'Righteous';
+    font-weight: bold;
 }
 .fullTime{
     font-size: xxx-large;
     font-weight: bold;
+    font-family: 'Righteous';
 }
 .tarjetas{
     font-size: x-large;
@@ -59,7 +62,7 @@
     display: block;
     width: 50px;
     height: 50px;
-    background-color:rgb(235, 117, 14);
+    background-color:#D32F2F;
     color: #fff;
     position: absolute; /* ubico el boton donde quiero dentro de su caja */
     left: 50%;
@@ -71,7 +74,7 @@
     cursor: pointer;
 }
 .arriba:hover{
-    background-color: rgb(37, 57, 211) !important; 
+    background-color:#F44336;
     color: black;
     transition: 0.9s ease;
 }
@@ -84,6 +87,7 @@
     font-weight: bold;
     font-family: 'Righteous';
     font-size: large;
+    color: #F44336;;
 }
 .developer a:hover{
     color: aqua;
