--- a/styles/sobreMi.css
+++ b/styles/sobreMi.css
@@ -1,17 +1,17 @@
 .sobremi{
-    padding-top: 8%;
-    padding-bottom: 8%;
-    background: url(../img/fondo6.jpg);
-    color: white;
+    padding-top: 6%;
+    padding-bottom: 2%;
+    background-color: white;
+    color: black;
 }
 .cajaPresentacion{
     display: flex;
     align-items: center; /* alinea respecto al eje Y */
-    text-align: center;
     margin-left: auto;
     margin-right: auto;
     width: 90%;
     justify-content: space-around;
+    
 }
 .caja-fotoIgnacio{
     width: 30%;
@@ -22,8 +22,7 @@
 }
 .caja-presentacion{
     width: 60%;
-    text-align: center;
-    padding: 2%;
+    padding: 1%;
     font-size: large;
 }
 
