--- a/styles/sobreMi.css
+++ b/styles/sobreMi.css
@@ -1,8 +1,8 @@
 .sobremi{
     padding-top: 6%;
     padding-bottom: 2%;
-    background-color: white;
-    color: black;
+    background: url(../img/fondoSobremi.jpg);
+    color: white;
 }
 .cajaPresentacion{
     display: flex;
